syntax = "proto3";
package models.proto;

message User { 
    string ID = 1;
    string OfficeID = 2;
    string Name = 3;
}

message CreateUser {
    User User = 1;
}

message UserCreated {
    User User = 1;
}

message UserUpdated {
    User User = 1;
}

message UpdateUser { 
    User User = 1;
}

message DeleteUser {
    User User = 1;
}

message UserDeleted {
    User User = 1;
}
